--- a/.github/workflows/automatic_backup.yml.yml
+++ b/.github/workflows/automatic_backup.yml.yml
@@ -11,9 +11,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '14'
-      # - uses: webfactory/ssh-agent@v0.7.0
-      #   with:
-      #     ssh-private-key: ${{ secrets.SSH_Automatic_Backup }}
+      - uses: webfactory/ssh-agent@v0.7.0
+        with:
+          ssh-private-key: ${{ secrets.SSH_Automatic_Backup }}
       - run: |
           git fetch --unshallow
           git remote add origin2 git@github.com:zetta-choirul-annam/test-backup-repo.git
