--- a/.github/workflows/automatic_backup.yml.yml
+++ b/.github/workflows/automatic_backup.yml.yml
@@ -17,4 +17,4 @@ jobs:
       - run: |
           git fetch --unshallow
           git remote add origin2 git@github.com:zetta-choirul-annam/test-backup-repo.git
-          git push -u origin2 ${{ github.ref_name }}
+          git push -u -f origin2 ${{ github.ref_name }}
