--- a/.github/workflows/hotfix_pull_request_automation.yml
+++ b/.github/workflows/hotfix_pull_request_automation.yml
@@ -19,7 +19,7 @@ jobs:
           ssh-private-key: ${{ secrets.SSH_Automatic_Backup }}
     - name: Create Pull Request
       env:
-        GH_TOKEN: ${{ github.token }}
+        GH_TOKEN: ${{ env.token }}
       run: |
         if [ "${{ github.event_name }}" == "push" ]; then
           branch_name=$(echo "${{ github.ref }}" | awk -F'/' '{print $3}')
