--- a/.github/workflows/hotfix_pull_request_automation.yml
+++ b/.github/workflows/hotfix_pull_request_automation.yml
@@ -22,7 +22,7 @@ jobs:
         GH_TOKEN: ${{ secrets.TOKEN }}
       run: |
         if [ "${{ github.event_name }}" == "push" ]; then
-          branch_name=$(echo "${{ github.ref }}" | awk -F'/' '{print $3}')
+          branch_name=$(echo "${{ github.ref }}")
           echo "Creating a pull request for branch $branch_name..."
           
           pr_title="Automated Pull Request for $branch_name to dev_production"
