--- a/.github/workflows/hotfix_pull_request_automation.yml
+++ b/.github/workflows/hotfix_pull_request_automation.yml
@@ -23,9 +23,9 @@ jobs:
       run: |
         if [ "${{ github.event_name }}" == "push" ]; then
           branch_name=$(echo "${{ github.ref }}")
+          current_datetime=$(date +"%Y-%m-%d %H:%M:%S")
           echo "Creating a pull request for branch $branch_name..."
-          
-          pr_title="Automated Pull Request for $branch_name to dev_production `r format(Sys.time(), '%d %B, %Y')`"
+          pr_title="Automated Pull Request for $branch_name - $current_datetime"
           pr_body="This pull request was automatically created when branch $branch_name was pushed."
           gh pr create --base dev_production --head "$branch_name" --title "$pr_title" --body "$pr_body"
         fi
