[Test commit] Hello world

--- a/.github/workflows/hotfix_pull_request_automation.yml
+++ b/.github/workflows/hotfix_pull_request_automation.yml
@@ -27,6 +27,6 @@ jobs:
           current_datetime=$(date +"%Y%m%d %H:%M")
           echo "Creating a pull request for branch $branch_name..."
           pr_title="Automated Pull Request for $branch_name - $current_datetime"
-          pr_body="This pull request was automatically created when branch $branch_name was pushed.<br />  ### List of changes:<br />  $(git log --pretty=format:'- %s' dev_staging..$branch_name)"
+          pr_body="This pull request was automatically created when branch $branch_name was pushed.<br/>  <h3>List of changes</h3>:<br/>  $(git log --pretty=format:'- %s' dev_staging..$branch_name)"
           gh pr create --base dev_production --head "$branch_name" --title "$pr_title" --body "$pr_body"
         fi
