--- a/.github/workflows/hotfix_pull_request_automation.yml
+++ b/.github/workflows/hotfix_pull_request_automation.yml
@@ -27,6 +27,11 @@ jobs:
           current_datetime=$(date +"%Y%m%d %H:%M")
           echo "Creating a pull request for branch $branch_name..."
           pr_title="Automated Pull Request for $branch_name - $current_datetime"
-          pr_body="This pull request was automatically created when branch $branch_name was pushed.<h3>List of changes:</h3>$(git log --pretty=format:'- %h %s (%an)' dev_staging..$branch_name)"
+          pr_body="This pull request was automatically created when branch $branch_name was pushed.<h3>List of changes:</h3>"
+          # Loop through commit messages
+          IFS=$'\n'
+          for commit_message in $(git log --pretty=format:'- %h %s (%an)' dev_staging..$branch_name); do
+            pr_body="$pr_body\n$commit_message"
+          done
           gh pr create --base dev_production --head "$branch_name" --title "$pr_title" --body "$pr_body"
         fi
