--- a/.github/workflows/hotfix_pull_request_automation.yml
+++ b/.github/workflows/hotfix_pull_request_automation.yml
@@ -22,6 +22,7 @@ jobs:
         GH_TOKEN: ${{ secrets.TOKEN }}
       run: |
         git fetch origin dev_staging:dev_staging
+        echo $(git log --pretty=format:'- %h %s (%an)' dev_staging..$branch_name)
         if [ "${{ github.event_name }}" == "push" ]; then
           branch_name=$(echo "${{ github.ref }}" | sed 's/refs\/heads\///')
           current_datetime=$(date +"%Y%m%d %H:%M")
@@ -30,7 +31,7 @@ jobs:
           pr_body="This pull request was automatically created when branch $branch_name was pushed.<h3>List of changes:</h3>"
           # Loop through commit messages
           IFS='\n'
-          for commit_message in $(git log --pretty=format:'\n%h %s (%an)' dev_staging..$branch_name); do
+          for commit_message in $(git log --pretty=format:'- %h %s (%an)' dev_staging..$branch_name); do
             pr_body="$pr_body<br/>$commit_message"
           done
           gh pr create --base dev_production --head "$branch_name" --title "$pr_title" --body "$pr_body"
